--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -7,22 +7,6 @@
     android:orientation="vertical"
     tools:context="info.maxmol.generals.GameActivity">
 
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="5dp"
-        android:id="@+id/gamestats_layout"
-        android:background="@color/colorPrimaryDark">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/gamestats_money"
-            android:textSize="18dp"
-            android:textColor="@android:color/white"/>
-    </GridLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -50,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="14dp"
-            android:text="Ready"
+            android:text="Start"
             android:id="@+id/game_panel_3_button"/>
     </LinearLayout>
 
@@ -86,4 +70,23 @@
 
         </RelativeLayout>
     </ScrollView>
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="5dp"
+        android:id="@+id/gamestats_layout"
+        android:background="@color/colorPrimaryDark"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/gamestats_money"
+            android:textSize="18dp"
+            android:textColor="@android:color/white"/>
+    </GridLayout>
 </RelativeLayout>
