--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -5,35 +5,70 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="info.maxmol.generals.MainMenu">
+
+    <info.maxmol.generals.StarsBackround
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:textSize="12pt"
         android:text="@string/app_name"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:id="@+id/mainmenu_appname"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/mainmenu_bottomlayout"
+        android:gravity="center"
         android:orientation="vertical"
-        android:gravity="center_vertical">
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="28sp"
+            android:padding="12sp"
+            android:textColor="@android:color/white"
+            android:id="@+id/mainmenu_money"
+            android:text=""/>
+        <Button
+            android:layout_width="wrap_content"
+            android:padding="10sp"
+            android:layout_height="wrap_content"
+            android:text="Reset Progress"
+            android:layout_marginBottom="16dp"
+            android:textColor="@android:color/white"
+            android:id="@+id/mainmenu_resetprogress"
+            android:background="@color/colorAccent"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center_vertical"
+        android:layout_below="@id/mainmenu_appname"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:id="@+id/mainmenu_abovelayout">
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/menu_new_game"
+            android:text="Play"
             android:id="@+id/mainmenu_newgame"/>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/menu_continue_game"
+            android:text="Select Level"
             android:id="@+id/mainmenu_continue"/>
-    </LinearLayout>>
+    </LinearLayout>
 </RelativeLayout>
