--- a/IGP/app/src/main/res/layout/activity_main_menu.xml
+++ b/IGP/app/src/main/res/layout/activity_main_menu.xml
@@ -15,10 +15,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:textSize="12pt"
+        android:textSize="40sp"
         android:text="@string/app_name"
         android:textAlignment="center"
         android:textColor="@android:color/white"
+        android:fontFamily="@font/unlearn2"
         android:id="@+id/mainmenu_appname"/>
 
     <LinearLayout
@@ -33,20 +34,22 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="28sp"
-            android:padding="12sp"
+            android:textSize="40sp"
+            android:padding="12dp"
             android:textColor="@android:color/white"
             android:id="@+id/mainmenu_money"
+            android:fontFamily="@font/unlearn2"
             android:text=""/>
         <Button
             android:layout_width="wrap_content"
-            android:padding="10sp"
+            android:padding="10dp"
+            android:textSize="25sp"
             android:layout_height="wrap_content"
             android:text="Reset Progress"
             android:layout_marginBottom="16dp"
-            android:textColor="@android:color/white"
             android:id="@+id/mainmenu_resetprogress"
-            android:background="@color/colorAccent"/>
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:fontFamily="@font/unlearn2" />
     </LinearLayout>
 
      <LinearLayout
@@ -62,12 +65,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Play"
+            android:textSize="25sp"
+            android:fontFamily="@font/unlearn2"
             android:id="@+id/mainmenu_newgame"/>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Select Level"
+            android:textSize="25sp"
+            android:fontFamily="@font/unlearn2"
             android:id="@+id/mainmenu_continue"/>
     </LinearLayout>
 </RelativeLayout>
