--- a/IGP/app/src/main/res/layout/activity_main_menu.xml
+++ b/IGP/app/src/main/res/layout/activity_main_menu.xml
@@ -34,22 +34,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="40sp"
+            android:textSize="25sp"
             android:padding="12dp"
             android:textColor="@android:color/white"
             android:id="@+id/mainmenu_money"
             android:fontFamily="@font/unlearn2"
             android:text=""/>
-        <Button
-            android:layout_width="wrap_content"
-            android:padding="10dp"
-            android:textSize="25sp"
-            android:layout_height="wrap_content"
-            android:text="Reset Progress"
-            android:layout_marginBottom="16dp"
-            android:id="@+id/mainmenu_resetprogress"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:fontFamily="@font/unlearn2" />
     </LinearLayout>
 
      <LinearLayout
@@ -65,16 +55,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Play"
-            android:textSize="25sp"
-            android:fontFamily="@font/unlearn2"
+            android:textSize="18sp"
+            android:fontFamily="@font/sabofilled"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:id="@+id/mainmenu_newgame"/>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Select Level"
-            android:textSize="25sp"
-            android:fontFamily="@font/unlearn2"
+            android:textSize="18sp"
+            android:fontFamily="@font/sabofilled"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:id="@+id/mainmenu_continue"/>
+         <Button
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:text="Settings"
+             android:textSize="18sp"
+             android:fontFamily="@font/sabofilled"
+             style="@style/Widget.AppCompat.Button.Colored"
+             android:id="@+id/mainmenu_settings"/>
     </LinearLayout>
 </RelativeLayout>
