--- a/IGP/app/src/main/res/layout/activity_select_level.xml
+++ b/IGP/app/src/main/res/layout/activity_select_level.xml
@@ -22,7 +22,7 @@
             android:text="Select Level"
             android:fontFamily="@font/unlearn2"
             android:textColor="@android:color/white"
-            android:id="@+id/selectLevel_appName"
+            android:id="@+id/select_level_title"
             android:textAlignment="center"/>
 
         <GridLayout
